2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.man: More semantic markup, less visual one.

2003-01-16  Tcl Project  <akupries@shaw.ca>

	* comm.man: 

2002-08-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.test: Removed writing of file ~/foo, was debugging
	  code. Changed creation and usage of file 'spawn' to allow an
	  arbitrary setting of -tmpdir. Fixes SF Bug #589225 reported by
	  Don Porter <dgp@users.sourceforge.net>.

2002-03-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version number to 4.0 per request by John LoVerso.

	* comm.tcl: Applied patch #526499 improving the handling of errors
	  for async invoked commands.

2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.tcl: Frink run.

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 3.7.1.

2001-11-16  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* comm.n: Updated to reflect the changes in the comm code
	  (namespaces). This fixes SF item #480227.

	* comm.tcl: Fixed two places where namespacing was not handled
	  correctly.

2001-08-22  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* Integrated into tcllib.